--- a/style.css
+++ b/style.css
@@ -127,10 +127,6 @@ p {
   /* padding-top: 56px; */
 }
 
-.row {
-  /* border: 1px solid rgba(0,0,0,0.54); */
-}
-
 .col-fl {
   display: flex;
   flex-direction: column;
@@ -150,6 +146,7 @@ p {
   position: relative;
   width: 300px;
   margin-right: -120px;
+  pointer-events: none;
 }
 
 .grey {
@@ -249,4 +246,38 @@ p {
 
 .footer-text {
   font-size: 0.8em;
+}
+
+/* ----- Responsive ----- */
+@media screen and (max-width: 1280px) {
+  .card-profile {
+    font-size: 0.8em;
+  }
+
+  .card-profile .lead {
+    font-size: 1.1em;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .product-img {
+    /* width: 90%; */
+    margin-right: -170px;
+  }
+
+  .not-on-small-screens {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .product-img {
+    right: 60px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .title {
+    font-size: 4em;
+  }
 }
