--- a/style.css
+++ b/style.css
@@ -248,6 +248,12 @@ p {
   font-size: 0.8em;
 }
 
+.official-logo {
+  width: 96px;
+  display: block;
+  margin: 0 auto;
+}
+
 /* ----- Responsive ----- */
 @media screen and (max-width: 1280px) {
   .card-profile {
@@ -261,7 +267,6 @@ p {
 
 @media screen and (max-width: 820px) {
   .product-img {
-    /* width: 90%; */
     margin-right: -170px;
   }
 
